# careplus_project

./: .env.example  .gitignore  README.md  atlas.hcl  bronze.py  data.csv  docker-compose.yml  pyproject.toml  requirements.txt  support.sql
db/: data_check.py  db_config.py  schema.sql
sql/: data.sql
