[project]
name = "careplus_project"
version = "0.1.0"
description = "ETL pipeline with SQLAlchemy, MySQL, and Docker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atlas-provider-sqlalchemy==0.5.0",
    "awscrt==0.32.2",
    "boto3==1.43.46",
    "botocore==1.43.46",
    "dotenv==0.9.9",
    "pandas==3.0.3",
    "SQLAlchemy==2.0.51"
]